--- a/RazorEngine.Core/RazorEngine.Core.csproj
+++ b/RazorEngine.Core/RazorEngine.Core.csproj
@@ -5,27 +5,49 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5BCCBCC3-F383-448E-860F-DCA11AFFC74F}</ProjectGuid>
+    <ProjectGuid>{D268F86D-2DAB-4329-A75F-3BCF6D5BCDC4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RazorEngine</RootNamespace>
-    <AssemblyName>RazorEngine.Core</AssemblyName>
+    <AssemblyName>RazorEngine</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
+    <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
+    <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
+    <CodeContractsRuntimeCallSiteRequires>False</CodeContractsRuntimeCallSiteRequires>
+    <CodeContractsRunCodeAnalysis>False</CodeContractsRunCodeAnalysis>
+    <CodeContractsNonNullObligations>True</CodeContractsNonNullObligations>
+    <CodeContractsBoundsObligations>True</CodeContractsBoundsObligations>
+    <CodeContractsArithmeticObligations>True</CodeContractsArithmeticObligations>
+    <CodeContractsRedundantAssumptions>True</CodeContractsRedundantAssumptions>
+    <CodeContractsRunInBackground>True</CodeContractsRunInBackground>
+    <CodeContractsShowSquigglies>True</CodeContractsShowSquigglies>
+    <CodeContractsUseBaseLine>False</CodeContractsUseBaseLine>
+    <CodeContractsEmitXMLDocs>True</CodeContractsEmitXMLDocs>
+    <CodeContractsCustomRewriterAssembly />
+    <CodeContractsCustomRewriterClass />
+    <CodeContractsLibPaths />
+    <CodeContractsExtraRewriteOptions />
+    <CodeContractsExtraAnalysisOptions />
+    <CodeContractsBaseLineFile>..\..\baseline.xml</CodeContractsBaseLineFile>
+    <CodeContractsCacheAnalysisResults>True</CodeContractsCacheAnalysisResults>
+    <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
+    <CodeContractsReferenceAssembly>%28none%29</CodeContractsReferenceAssembly>
+    <DocumentationFile>bin\Debug\RazorEngine.XML</DocumentationFile>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -42,13 +64,12 @@
     <AssemblyOriginatorKeyFile>RazorEngine.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Razor">
-      <HintPath>..\Libraries\System.Web.Razor.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="System.Web.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\Libraries\System.Web.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,42 +78,75 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Compilation\CSharpLanguageProvider.cs" />
-    <Compile Include="Compilation\CSharpRazorCodeGenerator.cs" />
-    <Compile Include="Compilation\CSharpRazorCodeLanguage.cs" />
+    <Compile Include="Compilation\CompilerServiceBase.cs" />
+    <Compile Include="Compilation\CompilerServiceBuilder.cs" />
+    <Compile Include="Compilation\CompilerServicesUtility.cs" />
+    <Compile Include="Compilation\CSharp\CSharpCodeParser.cs" />
+    <Compile Include="Compilation\CSharp\CSharpDirectCompilerService.cs" />
+    <Compile Include="Compilation\CSharp\CSharpRazorCodeGenerator.cs" />
+    <Compile Include="Compilation\CSharp\CSharpRazorCodeLanguage.cs" />
+    <Compile Include="Compilation\DefaultCompilerServiceFactory.cs" />
+    <Compile Include="Compilation\DirectCompilerServiceBase.cs" />
     <Compile Include="Compilation\HasDynamicModelAttribute.cs" />
-    <Compile Include="Compilation\ILanguageProvider.cs" />
-    <Compile Include="Compilation\RazorCompiler.cs" />
-    <Compile Include="Compilation\RequireNamespacesAttribute.cs" />
-    <Compile Include="Compilation\VBRazorCodeLanguage.cs" />
-    <Compile Include="Compilation\VBLanguageProvider.cs" />
-    <Compile Include="Compilation\VBRazorCodeGenerator.cs" />
-    <Compile Include="Configuration\NamespaceConfigurationElement.cs" />
-    <Compile Include="Configuration\NamespaceConfigurationElementConfiguration.cs" />
+    <Compile Include="Compilation\ICompilerService.cs" />
+    <Compile Include="Compilation\ICompilerServiceFactory.cs" />
+    <Compile Include="Compilation\RazorDynamicObject.cs" />
+    <Compile Include="Compilation\RazorEngineHost.cs" />
+    <Compile Include="Compilation\TypeContext.cs" />
+    <Compile Include="Compilation\VisualBasic\VBCodeParser.cs" />
+    <Compile Include="Compilation\VisualBasic\VBDirectCompilerService.cs" />
+    <Compile Include="Compilation\VisualBasic\VBRazorCodeGenerator.cs" />
+    <Compile Include="Compilation\VisualBasic\VBRazorCodeLanguage.cs" />
+    <Compile Include="Configuration\DefaultTemplateServiceConfiguration.cs" />
+    <Compile Include="Configuration\Fluent\FluentConfigurationBuilder.cs" />
+    <Compile Include="Configuration\Fluent\FluentTemplateServiceConfiguration.cs" />
+    <Compile Include="Configuration\Fluent\IConfigurationBuilder.cs" />
+    <Compile Include="Configuration\ITemplateServiceConfiguration.cs" />
     <Compile Include="Configuration\RazorEngineConfigurationSection.cs" />
-    <Compile Include="Configuration\TemplateServiceConfigurationElement.cs" />
-    <Compile Include="Configuration\TemplateServiceConfigurationElementCollection.cs" />
+    <Compile Include="Encoding.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Language.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Razor.cs" />
+    <Compile Include="Spans\ModelSpan.cs" />
+    <Compile Include="Templating\CachedTemplateItem.cs" />
+    <Compile Include="Templating\DefaultActivator.cs" />
+    <Compile Include="Templating\DefaultAppDomainFactory.cs" />
+    <Compile Include="Templating\DelegateActivator.cs" />
+    <Compile Include="Templating\DelegateAppDomainFactory.cs" />
+    <Compile Include="Templating\DelegateTemplateResolver.cs" />
+    <Compile Include="Templating\ExecuteContext.cs" />
+    <Compile Include="Templating\IActivator.cs" />
+    <Compile Include="Templating\IAppDomainFactory.cs" />
+    <Compile Include="Templating\InstanceContext.cs" />
+    <Compile Include="Templating\ITemplateResolver.cs" />
+    <Compile Include="Templating\Parallel\DefaultParallelQueryPlan.cs" />
+    <Compile Include="Templating\Parallel\IParallelQueryPlan.cs" />
+    <Compile Include="Templating\IsolatedTemplateService.cs" />
     <Compile Include="Templating\ITemplate.cs" />
     <Compile Include="Templating\ITemplateOfT.cs" />
+    <Compile Include="Templating\ITemplateService.cs" />
+    <Compile Include="Templating\RequireNamespacesAttribute.cs" />
     <Compile Include="Templating\TemplateBase.cs" />
     <Compile Include="Templating\TemplateBaseOfT.cs" />
     <Compile Include="Templating\TemplateCompilationException.cs" />
+    <Compile Include="Templating\TemplateServiceFactory.cs" />
+    <Compile Include="Templating\TypeLoader.cs" />
     <Compile Include="Templating\TemplateParsingException.cs" />
     <Compile Include="Templating\TemplateService.cs" />
-    <Compile Include="Templating\TemplateServiceFactory.cs" />
     <Compile Include="Templating\TemplateWriter.cs" />
+    <Compile Include="Text\HtmlEncodedString.cs" />
+    <Compile Include="Text\HtmlEncodedStringFactory.cs" />
+    <Compile Include="Text\IEncodedString.cs" />
+    <Compile Include="Text\IEncodedStringFactory.cs" />
+    <Compile Include="Text\RawString.cs" />
+    <Compile Include="Text\RawStringFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="RazorEngine.snk" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)$(TargetFileName)" "$(SolutionDir)\Nuget\RazorEngine\1.0\lib\NET40\" /Y
-xcopy "$(TargetDir)System.Web.Razor.dll" "$(SolutionDir)\Nuget\RazorEngine\1.0\lib\NET40\" /Y
-xcopy "$(SolutionDir)razorengine.nuspec" "$(SolutionDir)Nuget\RazorEngine\1.0\" /Y</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
