--- a/RazorEngine.Run/RazorEngine.Run.csproj
+++ b/RazorEngine.Run/RazorEngine.Run.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,12 +47,36 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Templating\ITemplate.cs" />
-    <Compile Include="Templating\ITemplateOfT.cs" />
-    <Compile Include="Templating\TemplateBase.cs" />
-    <Compile Include="Templating\TemplateBaseOfT.cs" />
-    <Compile Include="Templating\TemplateException.cs" />
-    <Compile Include="Templating\TemplateWriter.cs" />
+    <Compile Include="Templating\ExecuteContext.cs" />
+    <Compile Include="Templating\InstanceContext.cs" />
+    <Compile Include="Templating\ITemplate.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Templating\ITemplateOfT.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Templating\ITemplateService.cs" />
+    <Compile Include="Templating\TemplateBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Templating\TemplateBaseOfT.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Templating\TemplateException.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Templating\TemplateWriter.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Text\HtmlEncodedString.cs" />
+    <Compile Include="Text\HtmlEncodedStringFactory.cs" />
+    <Compile Include="Text\IEncodedString.cs" />
+    <Compile Include="Text\IEncodedStringFactory.cs" />
+    <Compile Include="Text\RawString.cs" />
+    <Compile Include="Text\RawStringFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="key.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
